--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     background: linear-gradient(135deg, red, white);
-  color: #2c3e50;
-  height: 100vh;
+    color: #2c3e50;
+    height: 100vh;
   margin: 0
   }
   
@@ -14,7 +14,7 @@ body {
   
   .flying-image {
     position: absolute;
-    width: 200px;
+    width: 150px;
     animation: fly 10s linear infinite;
     border-radius: 15px;
 
@@ -64,4 +64,9 @@ body {
     font-family:cursive;
 }
 
+#contactlocation {
+  width: 100%;
+  height: 250px;
+
+}
 
